Fix UI: User name overflows out of the profile dropdown   (#5993)
* Fix UI: User name overflows out of the profile dropdown  #3831

* Fix feed card text overflow

* Fix feed text oevrflow

--- a/openmetadata-ui/src/main/resources/ui/src/styles/x-master.css
+++ b/openmetadata-ui/src/main/resources/ui/src/styles/x-master.css
@@ -1350,3 +1350,9 @@ div.ant-typography-ellipsis-custom {
 .ant-empty-tasks {
   margin-top: 32px;
 }
+
+/* Feed text pre tag CSS */
+.activity-feed-card-text pre {
+  white-space: pre-wrap; /* Since CSS 2.1 */
+}
+/* Feed text pre tag CSS */
